--- a/EduProject/hattrick.css
+++ b/EduProject/hattrick.css
@@ -1,5 +1,42 @@
-﻿.body {
-    background-color: teal
+﻿*{
+    box-sizing: border-box;
+}
+
+div{
+    padding: 0.1%;
+}
+
+header{
+    overflow: hidden;
+    background-color: aliceblue;
+    padding: 20px;
+}
+
+header a{
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+header a.logo{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+header a:hover{
+    background-color: #ddd;
+    color: black;
+}
+
+header a.active{
+    background-color: dodgerblue;
+    color: white;
+}
+
+.header-right{
+    float: right;
 }
 
 .box {
@@ -19,13 +56,30 @@
 }
 
 .Column3 {
-    background-color: aliceblue;
+    background-color: aqua;
     width: 33%;
     float: left;
 }
 
-.box::after {
+.box::after{
     content: "Text after table";
-    margin: 30%;
     clear: both;
+}
+
+@media screen and (max-width: 700px){
+    header a{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .header-right{
+        float: none;
+        width: 100%;
+    }
+
+    .Column1, .Column2, .Column3{
+        float: none;
+        width: 100%;
+    }
 }
